# dblLinkedList-CodeBeauty

./: .clang-format  CMakeLists.txt  README.md  main.cpp
inc/: bst.h  dbll.h  node.h
src/: bst.cpp  dbll.cpp  node.cpp
